# Electronics_store

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: main.py
tests/: test_main.py
