[tool.poetry]
name = "electronics-store1"
version = "0.1.0"
description = ""
authors = ["Rocksed <ilyagotin@mail.ru>"]
readme = "README.md"
packages = [{include = "electronics_store1"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
